campaign/src/test/snapshots/orbitchain_campaign__test__event_snapshot_tests__donation_lifecycle_events.snap
---
source: campaign/src/test/event_snapshot_tests.rs
expression: log
---
== initialize ==
ContractEvent {
    ext: V0,
    contract_id: Some(
        ContractId(
            Hash(0000000000000000000000000000000000000000000000000000000000000003),
        ),
    ),
    type_: Contract,
    body: V0(
        ContractEventV0 {
            topics: VecM(
                [
                    String(
                        ScString(
                            StringM(campaign),
                        ),
                    ),
                    String(
                        ScString(
                            StringM(initialized),
                        ),
                    ),
                ],
            ),
            data: Map(
                Some(
                    ScMap(
                        VecM(
                            [
                                ScMapEntry {
                                    key: Symbol(
                                        ScSymbol(
                                            StringM(asset_count),
                                        ),
                                    ),
                                    val: U32(
                                        1,
                                    ),
                                },
                                ScMapEntry {
                                    key: Symbol(
                                        ScSymbol(
                                            StringM(created_at_ledger),
                                        ),
                                    ),
                                    val: U32(
                                        1000,
                                    ),
                                },
                                ScMapEntry {
                                    key: Symbol(
                                        ScSymbol(
                                            StringM(creator),
                                        ),
                                    ),
                                    val: Address(
                                        Contract(
                                            ContractId(
                                                Hash(0000000000000000000000000000000000000000000000000000000000000004),
                                            ),
                                        ),
                                    ),
                                },
                                ScMapEntry {
                                    key: Symbol(
                                        ScSymbol(
                                            StringM(end_time),
                                        ),
                                    ),
                                    val: U64(
                                        3592000,
                                    ),
                                },
                                ScMapEntry {
                                    key: Symbol(
                                        ScSymbol(
                                            StringM(goal_amount),
                                        ),
                                    ),
                                    val: I128(
                                        Int128Parts {
                                            hi: 0,
                                            lo: 1000,
                                        },
                                    ),
                                },
                                ScMapEntry {
                                    key: Symbol(
                                        ScSymbol(
                                            StringM(milestone_count),
                                        ),
                                    ),
                                    val: U32(
                                        1,
                                    ),
                                },
                            ],
                        ),
                    ),
                ),
            ),
        },
    ),
}
---
== donate (partial) ==
ContractEvent {
    ext: V0,
    contract_id: Some(
        ContractId(
            Hash(0000000000000000000000000000000000000000000000000000000000000003),
        ),
    ),
    type_: Contract,
    body: V0(
        ContractEventV0 {
            topics: VecM(
                [
                    Symbol(
                        ScSymbol(
                            StringM(donation_received),
                        ),
                    ),
                    Address(
                        Contract(
                            ContractId(
                                Hash(0000000000000000000000000000000000000000000000000000000000000003),
                            ),
                        ),
                    ),
                ],
            ),
            data: Vec(
                Some(
                    ScVec(
                        VecM(
                            [
                                Address(
                                    Contract(
                                        ContractId(
                                            Hash(0000000000000000000000000000000000000000000000000000000000000005),
                                        ),
                                    ),
                                ),
                                I128(
                                    Int128Parts {
                                        hi: 0,
                                        lo: 400,
                                    },
                                ),
                                String(
                                    ScString(
                                        StringM(XLM),
                                    ),
                                ),
                                I128(
                                    Int128Parts {
                                        hi: 0,
                                        lo: 400,
                                    },
                                ),
                                U64(
                                    1000000,
                                ),
                            ],
                        ),
                    ),
                ),
            ),
        },
    ),
}
---
== donate (reaches goal, unlocks milestone) ==
ContractEvent {
    ext: V0,
    contract_id: Some(
        ContractId(
            Hash(0000000000000000000000000000000000000000000000000000000000000003),
        ),
    ),
    type_: Contract,
    body: V0(
        ContractEventV0 {
            topics: VecM(
                [
                    String(
                        ScString(
                            StringM(campaign),
                        ),
                    ),
                    String(
                        ScString(
                            StringM(campaign_goal_reached),
                        ),
                    ),
                ],
            ),
            data: I128(
                Int128Parts {
                    hi: 0,
                    lo: 1000,
                },
            ),
        },
    ),
}
---
ContractEvent {
    ext: V0,
    contract_id: Some(
        ContractId(
            Hash(0000000000000000000000000000000000000000000000000000000000000003),
        ),
    ),
    type_: Contract,
    body: V0(
        ContractEventV0 {
            topics: VecM(
                [
                    Symbol(
                        ScSymbol(
                            StringM(milestone_unlocked),
                        ),
                    ),
                    Address(
                        Contract(
                            ContractId(
                                Hash(0000000000000000000000000000000000000000000000000000000000000003),
                            ),
                        ),
                    ),
                ],
            ),
            data: Vec(
                Some(
                    ScVec(
                        VecM(
                            [
                                U32(
                                    0,
                                ),
                                I128(
                                    Int128Parts {
                                        hi: 0,
                                        lo: 1000,
                                    },
                                ),
                                I128(
                                    Int128Parts {
                                        hi: 0,
                                        lo: 1000,
                                    },
                                ),
                            ],
                        ),
                    ),
                ),
            ),
        },
    ),
}
---
ContractEvent {
    ext: V0,
    contract_id: Some(
        ContractId(
            Hash(0000000000000000000000000000000000000000000000000000000000000003),
        ),
    ),
    type_: Contract,
    body: V0(
        ContractEventV0 {
            topics: VecM(
                [
                    Symbol(
                        ScSymbol(
                            StringM(donation_received),
                        ),
                    ),
                    Address(
                        Contract(
                            ContractId(
                                Hash(0000000000000000000000000000000000000000000000000000000000000003),
                            ),
                        ),
                    ),
                ],
            ),
            data: Vec(
                Some(
                    ScVec(
                        VecM(
                            [
                                Address(
                                    Contract(
                                        ContractId(
                                            Hash(0000000000000000000000000000000000000000000000000000000000000006),
                                        ),
                                    ),
                                ),
                                I128(
                                    Int128Parts {
                                        hi: 0,
                                        lo: 600,
                                    },
                                ),
                                String(
                                    ScString(
                                        StringM(XLM),
                                    ),
                                ),
                                I128(
                                    Int128Parts {
                                        hi: 0,
                                        lo: 1000,
                                    },
                                ),
                                U64(
                                    1000000,
                                ),
                            ],
                        ),
                    ),
                ),
            ),
        },
    ),
}
---
== release_milestone ==
ContractEvent {
    ext: V0,
    contract_id: Some(
        ContractId(
            Hash(48f1b6b8bc0d60f7140dd49b6120fbaf3cdbab2adaeea631313d9f0bae9532f1),
        ),
    ),
    type_: Contract,
    body: V0(
        ContractEventV0 {
            topics: VecM(
                [
                    Symbol(
                        ScSymbol(
                            StringM(transfer),
                        ),
                    ),
                    Address(
                        Contract(
                            ContractId(
                                Hash(0000000000000000000000000000000000000000000000000000000000000003),
                            ),
                        ),
                    ),
                    Address(
                        Contract(
                            ContractId(
                                Hash(0000000000000000000000000000000000000000000000000000000000000007),
                            ),
                        ),
                    ),
                    String(
                        ScString(
                            StringM(aaa:GAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEGWF),
                        ),
                    ),
                ],
            ),
            data: I128(
                Int128Parts {
                    hi: 0,
                    lo: 1000,
                },
            ),
        },
    ),
}
---
ContractEvent {
    ext: V0,
    contract_id: Some(
        ContractId(
            Hash(0000000000000000000000000000000000000000000000000000000000000003),
        ),
    ),
    type_: Contract,
    body: V0(
        ContractEventV0 {
            topics: VecM(
                [
                    Symbol(
                        ScSymbol(
                            StringM(milestone_released),
                        ),
                    ),
                    Address(
                        Contract(
                            ContractId(
                                Hash(0000000000000000000000000000000000000000000000000000000000000003),
                            ),
                        ),
                    ),
                ],
            ),
            data: Vec(
                Some(
                    ScVec(
                        VecM(
                            [
                                U32(
                                    0,
                                ),
                                I128(
                                    Int128Parts {
                                        hi: 0,
                                        lo: 1000,
                                    },
                                ),
                                String(
                                    ScString(
                                        StringM(XLM),
                                    ),
                                ),
                                Address(
                                    Contract(
                                        ContractId(
                                            Hash(0000000000000000000000000000000000000000000000000000000000000007),
                                        ),
                                    ),
                                ),
                                U64(
                                    1000000,
                                ),
                            ],
                        ),
                    ),
                ),
            ),
        },
    ),
}
---
== end_campaign ==
ContractEvent {
    ext: V0,
    contract_id: Some(
        ContractId(
            Hash(0000000000000000000000000000000000000000000000000000000000000003),
        ),
    ),
    type_: Contract,
    body: V0(
        ContractEventV0 {
            topics: VecM(
                [
                    String(
                        ScString(
                            StringM(campaign),
                        ),
                    ),
                    String(
                        ScString(
                            StringM(campaign_ended),
                        ),
                    ),
                ],
            ),
            data: Void,
        },
    ),
}
---
